--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "anarchy-register",
+  "name": "vodka-register",
   "version": "1.0.0",
   "description": "Gelişmiş Kayıt Botu",
-  "main": "anarchy.js",
+  "main": "vodka.js",
   "scripts": {
-    "test": "node anarchy.js",
+    "test": "node vodka.js",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "prettier": "prettier --write src/**/*.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AnarchyX0/ekip-pub-register.git"
+    "url": "git+https://github.com/vodkax0/ekip-pub-register.git"
   },
   "keywords": [
     "node"
   ],
-  "author": "SeonerVorteX",
+  "author": "vodka",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/AnarchyX0/ekip-pub-register/issues"
+    "url": "https://github.com/vodkax0/ekip-pub-register/issues"
   },
-  "homepage": "https://github.com/AnarchyX0/ekip-pub-register#readme",
+  "homepage": "https://github.com/vodkax0/ekip-pub-register#readme",
   "dependencies": {
     "discord.js": "^12.5.3",
     "fs": "0.0.1-security",
